--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <title>JavaScript Basics</title>
+        <title>JavaScript Basics part 4</title>
         <style>
             body {
                 height: 100vh;
